# Img2Ascii

./: .gitignore  CMakeLists.txt  README.md  compile.sh
outputs/: black.txt  chrome.txt  logos.txt  test.txt
src/: asciifier.cpp  asciifier.hpp  log.cpp  log.hpp  main.cpp  protocol.h  protocol.hpp  sdlsurface.cpp  sdlsurface.h  sdlsurface.hpp
